--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       POSTGRES_DB: "joom_calendar"
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgrespw"
+    ports:
+      - "5432:5432"
     volumes:
       - data:/var/lib/postgresql/data
   joom-calendar:
