--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
     environment:
       PORT: 8080
       DATABASE_URL: "postgres://postgres:postgrespw@postgres:5432/joom_calendar"
+      JWT_SECRET: "secret"
+      GITHUB_CLIENT_ID: "client_id"
+      GITHUB_CLIENT_SECRET: "client_secret"
 
 volumes:
   data:
